<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:icon="@drawable/ic_home" android:title="@string/home" />
        <item android:id="@+id/nav_cart" android:icon="@drawable/ic_cart" android:title="@string/cart" />
        <item android:id="@+id/nav_orders" android:icon="@drawable/ic_orders" android:title="@string/orders" />
        <item android:id="@+id/nav_profile" android:icon="@drawable/ic_profile" android:title="@string/profile" />
    </group>

    <item android:title="Shopping">
        <menu>
            <item android:id="@+id/nav_browse"
                android:icon="@drawable/ic_grid"
                android:title="@string/product_list_all" />
        </menu>
    </item>

    <item android:title="More">
        <menu>
            <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings" android:title="Settings" />
            <item android:id="@+id/nav_help" android:icon="@drawable/ic_help" android:title="Help and
             Support" />
        </menu>
    </item>

    <item android:title="Account">
        <menu>
            <item android:id="@+id/nav_logout" android:icon="@drawable/ic_logout" android:title="@string/logout" />
        </menu>
    </item>

</menu>
